[gd_scene load_steps=4 format=3 uid="uid://x84tcb0t06mo"]

[ext_resource type="Script" path="res://common/layouts/language_switcher/language_option.gd" id="1_ektfo"]
[ext_resource type="Texture2D" uid="uid://dixramdai4iq4" path="res://ui/assets/icons/pen.svg" id="1_p47ob"]
[ext_resource type="Texture2D" uid="uid://hmjhxdsk3pwj" path="res://ui/assets/icons/trash.svg" id="3_1qtny"]

[node name="LanguageOption" type="Button"]
custom_minimum_size = Vector2(0, 35)
offset_right = 159.0
offset_bottom = 35.0
alignment = 0
script = ExtResource("1_ektfo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginContainer_Small"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
theme_type_variation = &"LineEdit_Flat"
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "English"
max_length = 15
editable = false
selecting_enabled = false
flat = true
caret_blink = true
text_direction = 1

[node name="ControlsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HBoxContainer_Medium"
alignment = 2

[node name="btnEdit" type="TextureButton" parent="MarginContainer/HBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture_normal = ExtResource("1_p47ob")
ignore_texture_size = true
stretch_mode = 5

[node name="btnDelete" type="TextureButton" parent="MarginContainer/HBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture_normal = ExtResource("3_1qtny")
ignore_texture_size = true
stretch_mode = 5

[connection signal="focus_exited" from="MarginContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ControlsContainer/btnEdit" to="." method="_on_btn_edit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ControlsContainer/btnDelete" to="." method="_on_btn_delete_pressed"]
